Return tasks in desired format
